@@ -16,11 +16,15 @@ NEWS:
 
 
 NEW: [features/improvements]
++Number of major enhancements to the FileBrowser plugin
 +Support for highlighting PL/SQL and improved SQL highlighting (contributed by Thomas Keul)
 +New highting color scheme "BlueMonday" (by Thomas Keul)
 +Support for highlighting (Boo, Pike) programming languages
 +Shift+Ctrl+I will toggle useage of Tabs and Soft Tabs.
 +Shift+Ctrl+C to duplicate current line
++F3/Shift+F3 can be used as shortcuts for Find Next/Find Previous in the quick
+ find bar. These bindings are in addition to the already existing 
+ Enter/Shift+Enter ones.
 +General UI improvements
 +Minor python autocompletion improvements
 
@@ -30,6 +34,7 @@ BUG FIXES:
 +Fixed graphical bug that occured on osx after maximizing a window when multiple
 windows are open.
 +Fixed bug that caused a failure to exit when notebook has no pages
++Fixed paste to quick find control bug on gtk version
 
 OTHER:
 -Removed support for Metal style windows on OS X
